Added Local Storage

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -24,7 +24,7 @@
     <div id="quoteDisplay"></div>
     <button id="newQuoteButton">Show New Quote</button>
     <button id="addQuoteButton">Add New Quote</button>
-
+    <button id="exportQuotesButton">Export Quotes</button>
     <div id="newQuoteForm">
         <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
         <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
