--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -30,7 +30,8 @@
         <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
         <button onclick="addQuote()">Add Quote</button>
     </div>
-
+    
+    <input type="file" id="fileInput">
 
     <script src="script.js"></script>
 </body>
